fix errors from automerge